--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -11,6 +11,7 @@
         <a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/login}">Login</a>
         <a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/register}">Register</a>
         <a href="#" th:if="${isAuthenticated}" th:href="@{/auth/logout}">Logout</a>
+        <a href="#" th:if="${isAuthenticated}" th:href="@{/user/Me}">My Profile</a>
     </h3>
 </div>
 </body>
