Contests in Phase 1 and 2 pages made, Contest page made

--- a/src/main/resources/templates/ContestViewPhase1.html
+++ b/src/main/resources/templates/ContestViewPhase1.html
@@ -23,7 +23,7 @@
     <div class="post-info">
         <div class="meta-info">
             <span th:text="'Category: ' + ${contest.category}">Category: Wild Nature</span>
-            <span th:text="'Phase: ' + ${contest.phase.name}">Phase: 1/span>
+            <span th:text="'Phase: ' + ${contest.phase.name}">Phase: 1</span>
         </div>
     </div>
 
