--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -15,7 +15,7 @@
         <h1 class="title">Register for Photo Contest</h1>
         <nav>
             <ul class="nav-links">
-                <li><a th:href="@{/}">Home</a></li>
+                <li><a href="#" th:href="@{/}" th:text="#{navigation.home}">Home</a></li>
             </ul>
         </nav>
     </div>
