--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -23,11 +23,13 @@
                 <li><a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/login}">Login</a></li>
                 <li><a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/register}">Register</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/auth/logout}">Logout</a></li>
-                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/user/Me}">My Profile</a></li>
+                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/user/me}">My Profile</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/phaseOne}">Contests In Phase
                     1</a></li>
-                <li><a href="#" th:if="${isAuthenticated && session.isOrganizer || session.isJury}"
+                <li><a href="#"
+                       th:if="${isAuthenticated != null && isAuthenticated && session != null && (session.isOrganizer || session.isJury)}"
                        th:href="@{/contest/phaseTwo}">Contests In Phase 2</a></li>
+                <li><a th:if="${isAuthenticated} and ${session.isOrganizer}" th:href="@{/contest/new}">Create New Contest</a></li>
             </ul>
         </nav>
     </div>
