--- a/src/main/resources/templates/MeView.html
+++ b/src/main/resources/templates/MeView.html
@@ -1,34 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>My Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Profile - Photography Contest</title>
+    <link rel="stylesheet" th:href="@{/css/profile.css}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<div class="body-content">
-    <div class="header">
-        <h1 th:text="#{my.profile}">My Profile</h1>
+
+<!-- Хедър с навигационно меню -->
+<header class="site-header">
+    <div class="container">
+        <h1 class="title">My Profile</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#" th:href="@{/}" th:text="#{navigation.home}">Home</a></li>
+                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/auth/logout}">Logout</a></li>
+            </ul>
+        </nav>
     </div>
+</header>
 
-    <p class="margin12" th:text="#{user.label.username} + ': ' + ${user.username}">Username</p>
-    <p class="margin12" th:text="#{user.label.email} + ': ' + ${user.email}">Email</p>
-    <p class="margin12" th:text="#{user.label.fullName} + ': ' + ${user.firstName + ' ' + user.lastName}">Full Name</p>
+<!-- Основно съдържание -->
+<main>
+    <div class="body-content">
+        <div class="header">
+            <h1 th:text="#{my.profile}">My Profile</h1>
+        </div>
 
-    <div class="button-container">
-        <form th:action="@{/user/{id}/update(id=${id})}" method="get">
-            <button type="submit" class="edit">Edit User</button>
-        </form>
+        <div class="profile-info">
+            <p class="margin12" th:text="#{user.label.username} + ': ' + ${user.username}">Username</p>
+            <p class="margin12" th:text="#{user.label.email} + ': ' + ${user.email}">Email</p>
+            <p class="margin12" th:text="#{user.label.fullName} + ': ' + ${user.firstName + ' ' + user.lastName}">Full
+                Name</p>
+        </div>
 
-        <form th:action="@{/user/{id}/delete(id=${id})}" method="post">
-            <button type="submit" class="delete" onclick="return confirm('Are you sure you want to delete this user?')">
-                Delete User
-            </button>
-        </form>
+        <div class="button-container">
+            <form th:action="@{/user/{id}/update(id=${id})}" method="get">
+                <button type="submit" class="edit">Edit User</button>
+            </form>
+
+            <form th:action="@{/user/{id}/delete(id=${id})}" method="post">
+                <button type="submit" class="delete"
+                        onclick="return confirm('Are you sure you want to delete this user?')">
+                    Delete User
+                </button>
+            </form>
+        </div>
     </div>
-</div>
+</main>
 
+<!-- Футър -->
 <footer>
-    <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' CryptoForum'}">CryptoForum</small>
+    <div class="container">
+        <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' PhotoContest'}">© 2024
+            PhotoContest</small>
+    </div>
 </footer>
 
 </body>
