--- a/src/main/resources/templates/PhotoView.html
+++ b/src/main/resources/templates/PhotoView.html
@@ -20,6 +20,9 @@
             <span th:text="'Photo: ' + ${photo.photoUrl}">Photo</span>
             <span th:text="'Created At: ' + ${#temporals.format(photo.getCreatedAt(), 'dd-MM-yyyy')}">Created At: 01-01-2024</span>        </div>
     </div>
+    <form th:if="${!isRated}" th:action="@{/photo/{id}/set/score(id=${photo.id})}" method="get">
+        <button type="submit" class="edit">Rate</button>
+    </form>
 </div>
 <footer>
     <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' PhotoContest'}">PhotoContest</small>
