--- a/src/main/resources/static/css/contests.css
+++ b/src/main/resources/static/css/contests.css
@@ -93,8 +93,9 @@ main {
     display: table-cell;
     padding: 10px;
     border-bottom: 1px solid #ddd;
-    text-align: left;
+    text-align: center;
     vertical-align: middle;
+
 }
 
 .header .cell {
