--- a/src/main/resources/templates/PhotoView.html
+++ b/src/main/resources/templates/PhotoView.html
@@ -2,30 +2,52 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Details</title>
-
+    <link rel="stylesheet" th:href="@{/css/photoDetails.css}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 
+<header class="site-header">
+    <div class="container">
+        <h1 class="title">Photo Details</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a th:href="@{/}">Home</a></li>
+                <li><a th:href="@{/user/me}">My Profile</a></li>
+                <li><a th:href="@{/auth/logout}">Logout</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
 <div class="body-content">
     <div class="header">
-        <h2 th:text="${photo.title}">Photo Title</h2>
+        <h2 class="photo-title" th:text="${photo.title}">Photo Title</h2>
     </div>
     <div class="post-info">
         <div class="meta-info">
             <span th:text="'Story: ' + ${photo.story}">Story: ...</span>
             <span th:text="'Contest: ' + ${photo.contest.title}">Contest: ...</span>
             <span th:text="'Username: ' + ${photo.user.username}">Username: ...</span>
-            <span th:text="'Photo: ' + ${photo.photoUrl}">Photo</span>
-            <span th:text="'Created At: ' + ${#temporals.format(photo.getCreatedAt(), 'dd-MM-yyyy')}">Created At: 01-01-2024</span>        </div>
+            <span th:text="'Created At: ' + ${#temporals.format(photo.createdAt, 'dd-MM-yyyy')}">Created At: 01-01-2024</span>
+        </div>
+        <div class="photo-container">
+            <img th:src="@{${photo.photoUrl}}" alt="Photo Image"/>
+        </div>
     </div>
     <form th:if="${!isRated}" th:action="@{/photo/{id}/set/score(id=${photo.id})}" method="get">
-        <button type="submit" class="edit">Rate</button>
+        <button type="submit" class="rate-button">Rate</button>
     </form>
 </div>
+
 <footer>
-    <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' PhotoContest'}">PhotoContest</small>
+    <div class="container">
+        <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' PhotoContest'}">© 2024 PhotoContest</small>
+    </div>
 </footer>
+
 </body>
 </html>
